# mpas-realtime

./: .envrc  .gitignore  README.md  download.py  plot_raw.py  pyproject.toml  run_mpas.py
conf/synoptic25km/: namelist.atmosphere  namelist.init_atmosphere  streams.atmosphere  streams.init_atmosphere
scripts/: 00_init.sh  01_zlib.sh  02_mpich.sh  03_hdf5.sh  04_pnetcdf.sh  05_netcdf_c.sh  06_netcdf_fortran.sh  07_pio.sh  clean_all.sh  compile-mpas.sh  env.sh  install-prereqs.sh  run_atmosphere.sh  run_full_pipeline.sh  run_init_atmosphere.sh  run_wps.sh
scripts/mpas/: compile-mpas.sh
scripts/tools/: metis.sh  mpas-tools.sh
scripts/wps/: compile-wps.sh
