[tool.poetry]
name = "mpas-realtime"
version = "0.1.0"
description = "Running a realtime MPAS model"
authors = ["Daniel Zurawski <djzurawski@gmail.com>"]
readme = "README.md"
packages = [{include = "mpas_realtime"}]

[tool.poetry.dependencies]
python = "^3.8"
f90nml = "^1.4.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
