[tool.poetry]
name = "mpas-realtime"
version = "0.1.0"
description = "Running a realtime MPAS model"
authors = ["Daniel Zurawski <djzurawski@gmail.com>"]
readme = "README.md"
packages = [{include = "mpas_realtime"}]

[tool.poetry.dependencies]
python = "^3.8"
f90nml = "^1.4.3"
requests = "^2.28.1"
MetPy = "^1.3.1"
Cartopy = "^0.21.0"
netCDF4 = "^1.6.1"
Shapely = "1.7.1"
simplekml = "^1.3.6"
numpy = "^1.23.4"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
